<resources>
    <string name="app_name">APOP Shared Book</string>
    <!--Welcome and Login Page -->
    <string name="imgDesc">img 1</string>
    <string name="login">LOGIN</string>
    <string name="signUp">SIGN UP</string>
    <string name="emailHint">Enter email</string>
    <string name="passHint">Enter password</string>
    <string name="WelcomeBack">WELCOME\nBACK</string>
    <string name="CrateAccount">CREATE\nACCOUNT</string>
    <string name="register">REGISTER</string>

    <!-- Main Menu -->
    <string name="imgUserProfile">The photos for user profile</string>
    <string name="txtUserName">amiewill428</string>
    <string name="txt_search_bar">Search a book name or address</string>
    <string name="imgAddBook">The icon of add book</string>
    <string name="imgUpdateBook">The icon of update book</string>
    <string name="imgBorrowBook">The icon of borrow book</string>
    <string name="imgReadingTracker">The icon of reading tracker</string>
    <string name="imgMessageIcon">The icon of message</string>
    <string name="txtMessage1">You have a book request from y612352</string>
    <string name="txtMessageDay1">2020/02/07 11:25 AM</string>
    <string name="txtMessage2">mary23112a send you a message</string>
    <string name="txtMessageDay2">2020/02/03 07:15 AM</string>
    <string name="string_img_message_nav" />

    <!-- page title -->
    <string name="txtAddBookPage">Add Book</string>
    <string name="txtUpdateBookPage">Update Book</string>
    <string name="txtBorrowBookPage">Borrow Book</string>
    <string name="txtReadingTrackerPage">Reading Tracker</string>
    <string name="txtUserAccountPage">User Account</string>
    <string name="txtMessagePage">Message</string>
    <string name="txtEditAccountPage">Edit User Information</string>
    <string name="txtReadingHistory">Reading History</string>
    <string name="txtCurrentLoan">Current Loan</string>
    <string name="txtRequestHistory">Request History</string>
    <string name="txtAddBookTrackerPage">Add A Book Tracker</string>
    <string name="txtAdminMenu">Admin Menu</string>
    <string name="txtAdminCreateUser">Create User</string>
    <string name="txtAdminUserList">View User List</string>

    <!-- bottom menu bar -->
    <string name="menu_add">ADD</string>
    <string name="menu_update">UPDATE</string>
    <string name="menu_borrow">BORROW</string>
    <string name="menu_tracker">TRACKER</string>
    <string name="menu_user">USER</string>

    <!-- Add book -->
    <string name="txtAddBookTitle">Enter the book of the title</string>
    <string name="txtUpdateBook">UPDATE BOOK</string>
    <string name="txtAddBookISBN">Enter the ISBN-13 number</string>
    <string name="txtAddBookAuthor">Enter the book of author</string>
    <string name="txtAddBookPublisher">Enter the book of publisher</string>
    <string name="txtAddBookYear">Enter the publication year</string>
    <string name="btnBookSubmit">Add the book</string>
    <string name="btnUpdateImage">Update the book image</string>
    <string name="rdShareBook">Share Book</string>
    <string name="rdGiveAwayBook">Give Away Book</string>
    <string name="txtBookCategoryPrompt">Choose the book of category</string>
    <string-array name="txtBookCategory">
        <item>Fiction</item>
        <item>NonFiction</item>
    </string-array>
    <string-array name="bookStatus">
        <item>Share</item>
        <item>Give-away</item>
        <item>Available</item>
    </string-array>

    <!-- Borrow book -->
    <string name="imgBookCover">image of book</string>
    <string name="btnBorrow">Borrow</string>
    <string name="txtBookPrice">$1</string>
    <string name="txtBookTitle1">The Midnight of Library</string>
    <string name="txtBookTitle2">The Martian</string>
    <string name="txtBookTitle3">Ready Player One</string>
    <string name="txtBookAuthor1">Matt Haig</string>
    <string name="txtBookAuthor2">Andy Weir</string>
    <string name="txtBookAuthor3">Ernest Cline</string>
    <string name="txtBookFiction">Fiction</string>
    <string name="txtBookNonFiction">NonFiction</string>
    <string name="txtBookPublisher1">Viking / 2020</string>
    <string name="txtBookPublisher2">Crown / 2011</string>
    <string name="txtBookPublisher3">Crown Publishers / 2011</string>
    <string name="txtBookOwner1">Mary Williams</string>
    <string name="txtBookOwner2">Tom Low</string>
    <string name="txtBookOwner3">Jessica Blackthon</string>
    <string name="txtBookISBN">9781443455879</string>
    <string name="btnSearch">Search</string>
    <string name="hintSearch">Enter Preferred Pickup Location</string>
    <string name="txtBookLocationPrompt">Choose location to pick up</string>

    <!-- Borrow book -->
    <string name="btnSendMessage">SUBMIT MESSAGE</string>
    <string name="txtTitle">Book Information</string>
    <string name="enterMsgHint">Enter you message here</string>
    <string name="personalized">PERSONALIZED MSG</string>

    <!-- Edit account -->
    <string name="editUserPassword">Enter your new password</string>
    <string name="editUserName">Enter your full name</string>
    <string name="editUserEmail">Enter your email</string>
    <string name="editUserAddress">Enter your address</string>
    <string name="editUserInterest">Enter your interest</string>
    <string name="editUserAgePrompt">Enter your age</string>
    <string-array name="editUserInterest">
        <item>Fiction</item>
        <item>NonFiction</item>
    </string-array>
    <string name="btnSubmit">Submit changes</string>
    <string name="labelEditPassword">Your Password</string>
    <string name="labelEditName">Your Full Name</string>
    <string name="labelEditEmail">Your Email</string>
    <string name="labelEditAddress">Your Address</string>
    <string name="labelEditInterested">Your Interested Book</string>
    <string name="labelEditAge">Your Current Age</string>
    <string name="txtUserNameInfo">Amie Williams</string>
    <string name="txtUserPasswordInfo">amie1234</string>
    <string name="txtUserAddressInfo">700 Royal Avenue,New Westminster,BC V3M 5Z5</string>
    <string name="txtUserEmailInfo">amiewill428@gmail.com</string>
    <string name="txtUserAgeInfo">22</string>
    <string name="txtUserCateInfo">Fiction</string>
    <string name="imgEditAccount">icon of editing user account</string>

    <!-- user account page -->
    <string name="labelTitleUserName">Name</string>
    <string name="labelTitleUserAge">Age</string>
    <string name="labelTitleUserEmail">Email</string>
    <string name="labelTitleUserInterested">Interest</string>
    <string name="labelTitleUserAddress">Address</string>
    <string name="btnReadingHistory">Reading History</string>
    <string name="btnCurrentLoan">Current Loan</string>
    <string name="btnRequestHistory">Request History</string>
    <string name="btnSignOut">Sign Out</string>

    <!-- reading history -->
    <string name="txtBorrowFromUser">Borrow from mary12345</string>
    <string name="txtBorrowFromUser2">Borrow from sami8o82</string>
    <string name="txtBorrowFromUser3">Borrow from 1qaz2wsx</string>
    <string name="txtBorrowBookDate">2022/01/02</string>
    <string name="txtBorrowBookDate2">2022/02/23</string>
    <string name="txtBorrowBookDate3">2022/03/02</string>

    <!-- current loan -->
    <string name="btnBorrowExtend">Extend</string>
    <string name="btnBookReturned">Returned</string>

    <!-- request history -->
    <string name="txtRequestTypeG">Give Away</string>
    <string name="txtRequestTypeB">Borrow</string>
    <string name="imgRequestCheck">icon for accepting requests</string>
    <string name="imgRequestCancel">icon for rejecting requests</string>

    <!-- update book -->
    <string name="btnDelete">Delete</string>
    <string name="btnShare">Share</string>
    <string name="btnGiveAway">Give Away</string>
    <string name="btnEdit">Edit</string>

    <!-- edit book -->
    <string name="labelBookTitle">Book\'s title</string>
    <string name="labelBookISBN">ISBN-13</string>
    <string name="labelBookAuthor">Book\'s author</string>
    <string name="labelBookPublisher">Book\'s publisher</string>
    <string name="labelBookCategory">Book\'s category</string>
    <string name="labelBookYear">The publication year</string>
    <string name="txtBookPublisherOnly">Viking</string>
    <string name="txtBookYear">2020</string>

    <!-- reading tracker -->
    <string name="btnAddTrackerBook">Add book</string>
    <string name="EditReadingPage">Enter the page of reading</string>
    <string name="btnSave">Save</string>
    <string name="txtTrackerMessage1">Page.20</string>
    <string name="labelBookPage">Reading page</string>
    <string name="editBookPage">Enter reading page</string>
    <string name="btnAddTracker">Add the book tracker</string>

    <!-- message -->
    <string name="imgArrow">image of arrow icon</string>
    <string name="btnUpdateBook">UPDATE CHANGES</string>
    <string name="btnReply">REPLY</string>
    <string name="btnSubmitReply">SEND REPLY</string>
    <string-array name="acceptOrDecline">
        <item>N/A</item>
        <item>Accept</item>
        <item>Decline</item>
    </string-array>
    <string name="hintReply">Choose Accept of Decline if applicable. You can also  write your personalized reply </string>

    <!-- admin -->
    <string name="btnCreateUser">Register</string>
    <string name="btnUserList">VIEW USER LIST</string>
    <string name="labelUserId">User Id</string>
    <string name="EditUserId">Enter the user id</string>
    <string name="labelUserPw">User Password</string>
    <string name="EditUserPw">Enter the user password</string>
    <string name="labelUserFName">User First Name</string>
    <string name="EditUserFName">Enter the user first name</string>
    <string name="labelUserLName">User Last Name</string>
    <string name="EditUserLName">Enter the user last name</string>
    <string name="labelUserAdr">User Address</string>
    <string name="EditUserAdr">Enter the user address</string>
    <string name="labelUserAge">User Age</string>
    <string name="labelUserInterest">User Interest</string>
    <string name="EditUserAge">Enter the user age</string>
    <string-array name="userInterest">
        <item>Fiction</item>
        <item>NonFiction</item>
    </string-array>
    <string name="userInterestPrompt">User Interest</string>
    <string name="imgUserIcon">image of user</string>
    <string name="btnSendMes">Send Message</string>
    <string name="btnAdmin">Admin Logic</string>
    <string name="bookLocation">Location</string>
    <string name="labelTimeSpent">Time spent</string>
    <string name="txtTimeSpent">Enter time spent on reading the book</string>
    <string name="txtRTtitle">Enter information for the book you have read</string>

    <string-array name="locations">
        <item>New Westminster</item>
        <item>Vancouver</item>
        <item>Burnaby</item>
        <item>Brentwood</item>  <!--linked to dummy input. can be deleted later. -->
        <item>Richmond</item>
        <item>Coquitlam</item>
    </string-array>
</resources>