<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_background"
    android:orientation="vertical"
    tools:context=".UserAccountPage">

    <!-- Tool Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_light"
        android:elevation="10dp">
        <!-- back page icon -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_arrow_left"
            android:contentDescription="@string/imgMessageIcon"
            android:minWidth="24dp"
            android:minHeight="24dp"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
        <!-- page title -->
        <TextView
            android:id="@+id/txtToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtUserAccountPage"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray" />
        <!-- message icon -->
        <ImageButton
            android:id="@+id/btnMessageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_message_icon"
            android:contentDescription="@string/imgMessageIcon"
            android:minWidth="24dp"
            android:minHeight="24dp"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
    </androidx.appcompat.widget.Toolbar>

    <!-- User profile -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp">
            <!-- user icon -->
            <ImageButton
                android:id="@+id/btn_user_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="false"
                android:background="@drawable/user_profile_img"
                android:contentDescription="@string/imgUserProfile"
                tools:ignore="TouchTargetSizeCheck" />
            <!-- user name -->
            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="60sp"
                android:text="@string/txtUserName"
                android:textColor="#474846"
                android:textSize="22sp"
                android:textStyle="bold" />
            <!-- edit account icon -->
            <ImageButton
                android:id="@+id/btnUserEdit"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_edit"
                android:contentDescription="@string/imgEditAccount"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                tools:layout_centerVertical="true" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- display user information -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button_white"
        android:elevation="4dp"
        android:padding="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- the info of user name -->
                <TextView
                    android:id="@+id/labelTitleUserName"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/labelTitleUserName"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/txtUserNameInfo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp" />
                <!-- the info of user age -->
                <TextView
                    android:id="@+id/labelTitleUserAge"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/labelTitleUserAge"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtUserAge"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/txtUserAgeInfo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp" />
                <!-- the info of user email -->
                <TextView
                    android:id="@+id/labelTitleUserEmail"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="60dp"
                    android:text="@string/labelTitleUserEmail"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtUserEmail"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="60dp"
                    android:text="@string/txtUserEmailInfo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp" />
                <!-- the info of interested of user -->
                <TextView
                    android:id="@+id/labelTitleUserInterested"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="90dp"
                    android:text="@string/labelTitleUserInterested"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtUserInterested"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="90dp"
                    android:text="@string/txtBookFiction"
                    android:textAlignment="viewStart"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp" />
                <!-- the info of address of user -->
                <TextView
                    android:id="@+id/labelTitleUserAddress"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="120dp"
                    android:text="@string/labelTitleUserAddress"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtUserAddress"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="120dp"
                    android:text="@string/txtUserAddressInfo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.core.widget.NestedScrollView>

    <!-- button of reading history -->
    <Button
        android:id="@+id/btnReadingHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:backgroundTint="@color/dark_blue"
        android:drawableLeft="@drawable/ic_list"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="10dp"
        android:elevation="15dp"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingRight="10dp"
        android:paddingBottom="12dp"
        android:shadowColor="#000000"
        android:text="@string/btnReadingHistory"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <!-- button of current loan -->
    <Button
        android:id="@+id/btnCurrentLoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:backgroundTint="@color/dark_blue"
        android:drawableLeft="@drawable/ic_list"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="10dp"
        android:elevation="15dp"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingRight="10dp"
        android:paddingBottom="12dp"
        android:text="@string/btnCurrentLoan"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <!-- button of request history -->
    <Button
        android:id="@+id/btnRequestHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:backgroundTint="@color/dark_blue"
        android:drawableLeft="@drawable/ic_list"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="10dp"
        android:elevation="15dp"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingRight="10dp"
        android:paddingBottom="12dp"
        android:shadowColor="#000000"
        android:text="@string/btnRequestHistory"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />


    <!-- button of sign out -->
    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_btn_white"
        android:backgroundTint="@color/navy"
        android:drawableLeft="@drawable/ic_login"
        android:drawablePadding="10dp"
        android:elevation="15dp"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:shadowColor="#000000"
        android:text="@string/btnSignOut"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <!-- the bottom menu bar -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom">
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_menu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/nav_bg"
                android:elevation="4dp"
                app:fabCradleVerticalOffset="10dp"
                app:itemIconSize="18dp"
                app:itemIconTint="@color/bright_blue"
                app:itemTextColor="@color/bright_blue"
                app:labelVisibilityMode="unlabeled"
                app:menu="@menu/bottom_menu" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>