<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bookshelf"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="239dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="341dp"
        android:fontFamily="@font/candal"
        android:text="@string/WelcomeBack"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inpEmail"
        android:layout_width="382dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/emailHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inpPass"
        android:layout_width="382dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/passHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/btnLogin1"
        android:layout_width="195dp"
        android:layout_height="0dp"
        android:layout_marginBottom="77dp"
        android:background="#FF000000"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

</androidx.constraintlayout.widget.ConstraintLayout>